--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
-VUE_APP_FRONTEND_PORT = 8080
-VUE_APP_BACKEND_PORT = 5000
+ARANGO_PORT=6439
+ARANGO_URL=http://localhost
+VUE_APP_BACKEND_PORT=5000
+VUE_APP_FRONTEND_PORT=8080
 VUE_APP_URL=http://localhost
