--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,14 @@ frontend/pnpm-debug.log*
 
 **/__pycache__
 
-# do not push mock data
+# do not include mock data
 frontend/mock_data
 
 backend/data
 backend/src/test*
 backend/src/test.py
 backend/src/config.yml
+
+
+# do not include arangodb files
+arango_instance/
