--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "leaflet-draw": "^1.0.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.34.1",
+    "primevue": "3.39.0",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
