--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     image: arangodb:latest
     environment:
       ARANGO_ROOT_PASSWORD: root
-    ports:
-      - 6439:8529
+    #ports:
+    #  - 6439:8529
     volumes:
       - arangodb-vol:/var/lib/arangodb3
     networks:
