--- a/.gitignore
+++ b/.gitignore
@@ -31,14 +31,21 @@ frontend/pnpm-debug.log*
 # do not include mock data
 frontend/mock_data
 
+backend/src/database
+
 backend/data
 backend/src/test*
 backend/src/test.py
 backend/src/config.yml
 
+# ignore ipynb checkpoints
+*.ipynb_checkpoints
 
 # do not include arangodb files
 arango_instance/
 
 run_dev_instance.sh
 launch_server.sh
+
+archive/
+arangodb/
