--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^7.1.0",
+    "@vueuse/core": "^10.6.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
