fixed docker bug + handled empty location filter in STAC notebook request

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,6 @@ RUN pip install -r requirements.txt
 RUN python3 -m spacy download en_core_web_sm
 
 COPY src/ /app/src
-
+COPY assets/ /app/assets
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "5000"]
